# FVAdmin

./: .gitignore  LICENSE  README.md
api/: .env  .env.dev  .env.example  CLAUDE.md  databases.py  init_core.py  main.py  oss_client.py  pyproject.toml  seed.py
api/core/: cache.py  db.py  deps.py  log_config.py  middleware.py  redis_client.py  security.py  settings.py  util.py
api/mcp_server/: client.py  mcp_main.py
api/migrations/models/: 0_20251223145217_init.py  0_20260221195418_init.py  10_20251210110153_update.py  11_20251210230115_update.py  12_20251211232917_update.py  13_20251215223315_update.py  14_20251216201346_update.py  15_20251217112742_update.py  16_20251217221716_update.py  1_20251125003801_None.py  1_20260115212357_update.py  1_20260222202700_update.py  2_20251125003844_update.py  2_20260118114257_update.py  2_20260223015529_update.py  3_20251125150211_update.py  4_20251125150425_update.py  5_20251125151213_update.py  6_20251127001030_update.py  7_20251127004422_update.py  8_20251127222050_update.py  9_20251127222403_update.py
api/models/: ai_model.py  menu_model.py  operation_log_model.py  permission_model.py  role_model.py  user_model.py
api/modules/auth/: router.py  service.py
api/modules/log/: repository.py  router.py  service.py
api/modules/system/: repository.py  router.py  service.py
api/router/: ai_api.py  auth_api.py  deps.py  menu_api.py  operation_log_api.py  role_api.py  system_api.py  user_api.py
api/schemas/: ai.py  menu.py  operation_log.py  response.py  role.py  user.py
api/services/: __init__.py  auth_service.py  base.py  menu_service.py  operation_log_service.py  role_service.py  user_service.py
api/shared/: base_repository.py  base_schema.py  base_service.py  log_config.py  oss_client.py  utils.py
art-design-pro/: .env  package.json  pnpm-lock.yaml  vite.config.ts
art-design-pro/src/: App.vue
backend/: CLAUDE.md  init_core.py  main.py  pyproject.toml  seed.py
backend/core/: config.py  deps.py  exceptions.py  middleware.py
backend/modules/auth/: router.py  schemas.py  service.py
backend/modules/chat/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/log/: models.py  router.py
backend/modules/mcp/: mcp_client.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/model/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/system/: models.py  repository.py  router.py  schemas.py  service.py
backend/shared/: base_schema.py  base_service.py  captcha_service.py  redis_client.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
web/: .env  CLAUDE.md  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
(+116 files in other folders)
